src/test/contracts/negative/pattern_matching_anomalies/redundant_case/rx_w_ry.mligo
type p = One | Two

type t = { a : int ; b : p }

let s (x : t) = 
  match x with
    { a ; b = One } -> ()
  | _               -> ()
  | { a ; b = Two } -> ()